# couchutils

./: .coveragerc  .travis.yml  AUTHORS.md  AUTHORS.rst  HISTORY.md  HISTORY.rst  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-package.yml
couchutils/: __init__.py  __version__.py  compile_doc.py
docs/: README.md
src/couchutils/: __init__.py  compile_doc.py
tests/: test_compile_doc.py  test_compile_docs.py
tests/fixtures/compile_doc/test_dir/basic/views/numbers/: map.js
tests/fixtures/compile_doc/test_dir/full/: validate_doc_update.js
tests/fixtures/compile_doc/test_dir/full/filters/: doc.js
tests/fixtures/compile_doc/test_dir/full/lib/shows/: hello.js
tests/fixtures/compile_doc/test_dir/full/lists/: docs.js
tests/fixtures/compile_doc/test_dir/full/shows/: doc.js
tests/fixtures/compile_doc/test_dir/full/updates/: doc.js
tests/fixtures/compile_doc/test_dir/minimal/: _id
tests/fixtures/compile_docs/expected/: basic.json  full.json  minimal.json
tests/fixtures/compile_docs/test_dir/: file.json
tests/fixtures/compile_docs/test_dir/full/shows/: hello.js
tests/fixtures/compile_docs/test_dir/full/views/numbers/: map.js
