[tool.poetry]
name = "couchutils"
version = "0.5.0"
description = "A collection of CouchDB utils."
authors = ["Raymond Wanyoike <raymond.wanyoike@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rwanyoike/couchutils-python"
documentation = "https://github.com/rwanyoike/couchutils-python/tree/main/docs"
packages = [{ include = "couchutils", from = "src" }]
include = ["HISTORY.md"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
